	Do not search through actions when the Nautilus-provided list is empty.

	* plugin/nautilus-actions.c (get_hash_keys):
	Remove no more used function.

	* nact/nautilus-actions-config.glade:
	Remove (useless) 'field_changed_cb' handler from the menu icon.

	* nact/nact-editor.c:
	* nact/nact-action-editor.c:
	Restore tooltip display for the icon name depending on Gtk+ version.

2009-05-25 Pierre Wieser <pwieser@trychlos.org>

	* configure.ac:
	* Makefile.am:
	Reorganize install order so that plugin be installed last.

	* icons/Makefile.am:
	* libnautilus-actions/Makefile.am:
	* nact/Makefile.am:
	* plugin/Makefile.am:
	* utils/Makefile.am:
	Cleanup Makefile.am.

	* .gitignore: Update to ignore Glade work files.

	* plugin/Makefile.am:
	* libnautilus-actions/Makefile.am:
	Define G_LOG_DOMAIN variable.

	* libnautilus-actions/nautilus-actions-config.c:
	* libnautilus-actions/nautilus-actions-config.h:
	nautilus_actions_config_action_free_all_profile_names,
	nautilus_actions_config_action_get_first_profile_name,
	nautilus_actions_config_action_get_profiles_count,
	nautilus_actions_config_action_dump: new functions.

	* nact/nact-action-editor.c:
	* nact/nact-action-editor.h: New files to be able to edit an action
	without having to deal with the profile stuff.

	* nact/nautilus-actions-config.glade:
	Add EditActionDialogExt dialog.

	* nact/Makefile.am:
	* nact/nact-editor.c:
	* nact/nact-editor.h:
	* nact/nact-profile-editor.c:
	* nact/nact-profile-editor.h:
	* nact/nact-utils.c:
	* nact/nact-utils.h:
	* po/POTFILES.in:
	* po/ChangeLog: Updated accordingly.

2009-05-18 Pierre Wieser <pwieser@trychlos.org>

	Fix Glade regression I introduced myself when ansi-fying C sources !

	* *.c, *.h: Almost all sources files impacted.

	* m4/nact-maintainer-mode.m4: Creation.

	* plugin/nautilus-actions.c: Add debug mode to syslog.

2009-05-17 Pierre Wieser <pwieser@trychlos.org>

	Releasing 1.10.0

	* configure.ac: Update version number.
